# Cajamar-UniversityHack-2024

./: .gitignore  pyproject.toml  script_exploracion.ipynb  script_predicción.ipynb
losca/modelling/: pipeline.ipynb  predict.ipynb
losca/notebooks/: Biorreactor.ipynb  Biorreactor_Total.ipynb  Centrifuga.ipynb  Centrifuga_Total.ipynb  OF.ipynb  componentes.ipynb  fases_prod.ipynb  horas.ipynb  joining.ipynb  script_exploracion.ipynb  temp_humedades.ipynb  test.ipynb  test_EDA.ipynb
losca/processing/: EDA_full.ipynb  EDA_full_hard.ipynb  data_cleaning.ipynb  joining.ipynb  joining_test.ipynb  rebuild_OF.ipynb  rebuild_biorreactor.ipynb  rebuild_centrifuga.ipynb  rebuild_componentes.ipynb  rebuild_cultivo.ipynb  rebuild_horas.ipynb  rebuild_ino.ipynb  rebuild_pino.ipynb  rebuild_th.ipynb  script_predicción.ipynb
losca/reports/: Centrífuga12912_Datos.html  Centrífuga14246_Datos.html  Centrífuga17825_Datos.html  CinéticosIPC_Centrifugación.html  CinéticosIPC_Cultivos finales.html  CinéticosIPC_Inóculos.html  Fasesproducción_Cultivo final.html  Fasesproducción_Inóculo.html  Fasesproducción_Preinóculo.html  Fasesproducción_test_Cultivo final.html  Horasiniciofincentrífugas_Hoja1.html  Movimientoscomponentes_Full1.html  OF123456_Sheet1.html  centrifuga_total.html  horas.html  inoculo.html  mov_componentes.html  of.html  preinoculo.html  preinoculo_alternate.html
losca/tools/: utils.py
